--- a/code/Game/Game.vcxproj
+++ b/code/Game/Game.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="GraphicsSystemTest.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="RendererSystemTest.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -191,6 +192,7 @@
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="GraphicsSystemTest.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="RendererSystemTest.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TestApp.h" />
   </ItemGroup>
