- отключени кода треда

--- a/code/Other2/Other2.vcxproj.filters
+++ b/code/Other2/Other2.vcxproj.filters
@@ -123,16 +123,16 @@
       <Filter>Resource</Filter>
     </ClCompile>
     <ClCompile Include="Condition.cpp">
-      <Filter>Thread</Filter>
+      <Filter>_garbage\Thread</Filter>
     </ClCompile>
     <ClCompile Include="Mutex.cpp">
-      <Filter>Thread</Filter>
+      <Filter>_garbage\Thread</Filter>
     </ClCompile>
     <ClCompile Include="Thread.cpp">
-      <Filter>Thread</Filter>
+      <Filter>_garbage\Thread</Filter>
     </ClCompile>
     <ClCompile Include="ThreadLocalValue.cpp">
-      <Filter>Thread</Filter>
+      <Filter>_garbage\Thread</Filter>
     </ClCompile>
     <ClCompile Include="Attribute.cpp">
       <Filter>Object</Filter>
@@ -399,16 +399,16 @@
       <Filter>Resource</Filter>
     </ClInclude>
     <ClInclude Include="Condition.h">
-      <Filter>Thread</Filter>
+      <Filter>_garbage\Thread</Filter>
     </ClInclude>
     <ClInclude Include="Mutex.h">
-      <Filter>Thread</Filter>
+      <Filter>_garbage\Thread</Filter>
     </ClInclude>
     <ClInclude Include="Thread.h">
-      <Filter>Thread</Filter>
+      <Filter>_garbage\Thread</Filter>
     </ClInclude>
     <ClInclude Include="ThreadLocalValue.h">
-      <Filter>Thread</Filter>
+      <Filter>_garbage\Thread</Filter>
     </ClInclude>
     <ClInclude Include="Attribute.h">
       <Filter>Object</Filter>
@@ -541,17 +541,11 @@
     <Filter Include="Math">
       <UniqueIdentifier>{6dec1cbd-5aa9-4b0a-9a28-e10f0105405f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Platform">
-      <UniqueIdentifier>{8e0a32aa-0fdf-48d3-b7c4-40acd1d851a2}</UniqueIdentifier>
-    </Filter>
     <Filter Include="IO">
       <UniqueIdentifier>{e3a97995-d88c-40ae-b725-d09be25db667}</UniqueIdentifier>
     </Filter>
     <Filter Include="Resource">
       <UniqueIdentifier>{10396338-1e1b-42c1-a319-623d996648b5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Thread">
-      <UniqueIdentifier>{7aa3b481-a252-4961-95ae-1def4d4532b5}</UniqueIdentifier>
     </Filter>
     <Filter Include="Object">
       <UniqueIdentifier>{d41e56df-3354-4942-907a-de49de2dc72a}</UniqueIdentifier>
@@ -570,6 +564,12 @@
     </Filter>
     <Filter Include="Renderer">
       <UniqueIdentifier>{9c1847d3-2db6-4957-b144-7b9cb808c126}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="_garbage">
+      <UniqueIdentifier>{88359f63-dd04-4ceb-90df-ffbc81bef4d5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="_garbage\Thread">
+      <UniqueIdentifier>{7aa3b481-a252-4961-95ae-1def4d4532b5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
