--- a/code/Engine/Engine.vcxproj.filters
+++ b/code/Engine/Engine.vcxproj.filters
@@ -263,6 +263,15 @@
     <ClInclude Include="BaseHeader.h">
       <Filter>_OLD\base</Filter>
     </ClInclude>
+    <ClInclude Include="Iterator.h">
+      <Filter>_OLD\core\Container</Filter>
+    </ClInclude>
+    <ClInclude Include="IteratorAlgorithm.h">
+      <Filter>_OLD\core\Container</Filter>
+    </ClInclude>
+    <ClInclude Include="Allocator.h">
+      <Filter>_OLD\core\Container</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
@@ -469,6 +478,9 @@
     </ClCompile>
     <ClCompile Include="TestAnims.cpp">
       <Filter>_OLD\other</Filter>
+    </ClCompile>
+    <ClCompile Include="Allocator.cpp">
+      <Filter>_OLD\core\Container</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
